fix: build fixes

--- a/src/data/posts/why-we-should-care-about-good-design.mdx
+++ b/src/data/posts/why-we-should-care-about-good-design.mdx
@@ -34,3 +34,4 @@ Creating good design is not always easy. There are a number of challenges that d
 * Understanding the user: Good design must be user-centric. This means that designers must understand the needs and wants of the people who will be using their products.
 * Staying up-to-date with trends: The world of design is constantly evolving, so designers must stay up-to-date with the latest trends. This can be a challenge, as trends can change quickly.
 
+Build great products with good design!
