fix: image to blog
Signed-off-by: Varun Raj <varun@skcript.com>

--- a/src/data/posts/pick-the-right-tool.mdx
+++ b/src/data/posts/pick-the-right-tool.mdx
@@ -2,6 +2,7 @@
 title: Pick the right tool
 date: 2023-06-26
 description: Right tool is like the shortest path to your destination.
+cover: https://images.unsplash.com/photo-1497219055242-93359eeed651?ixlib=rb-4.0.3&  ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2898&q=80
 ---
 
 
