--- a/src/data/posts/the-little-things-matter.mdx
+++ b/src/data/posts/the-little-things-matter.mdx
@@ -2,6 +2,7 @@
 title: The Little Things Matter
 date: 2023-07-04
 description: Its all about a small step towards a big goal, and how to get there.
+cover: https://images.unsplash.com/photo-1501139083538-0139583c060f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80
 ---
 
 When trying to start a new habit, it's easy to get discouraged if you don't see results immediately. But the truth is, even the smallest amount of progress is still progress.
