--- a/src/data/posts/why-we-should-care-about-good-design.mdx
+++ b/src/data/posts/why-we-should-care-about-good-design.mdx
@@ -2,6 +2,7 @@
 title: Why we should care for good design?
 date: 2023-07-07
 description: A brief introduction to why we should care for good design.
+cover: https://images.unsplash.com/photo-1438012940875-4bf705025a8a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80
 ---
 
 Good design is all around us. It's in the products we use, the websites we visit, and even the cities we live in. But what is good design, and why should we care about it?
